Force a fixed width and gap between columns

--- a/wiki/src/install/inc/stylesheets/download.css
+++ b/wiki/src/install/inc/stylesheets/download.css
@@ -184,10 +184,11 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  gap: 20px;
 }
 
 #warnings section {
-  width: 100%;
+  width: 296px;
 }
 
 #warnings > p {
@@ -201,8 +202,8 @@ h1 {
 }
 
 @media (min-width: 986px) {
-  #warnings section {
-    width: 310px;
+  #warnings {
+    justify-content: space-between;
   }
 }
 
